--- a/packages/hs-home/package.json
+++ b/packages/hs-home/package.json
@@ -5,6 +5,7 @@
     "@craco/craco": "^7.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "swiper": "^11.2.4"
   },
