--- a/packages/hs-home/package.json
+++ b/packages/hs-home/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
+    "requests-sdk": "^1.0.2",
     "swiper": "^11.2.4"
   },
   "scripts": {
