--- a/packages/hs-home/package.json
+++ b/packages/hs-home/package.json
@@ -4,8 +4,12 @@
   "dependencies": {
     "@craco/craco": "^7.1.0",
     "antd": "^5.24.6",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "luxon": "^3.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "requests-sdk": "^1.0.2",
