--- a/packages/hs-home/package.json
+++ b/packages/hs-home/package.json
@@ -16,8 +16,9 @@
     "swiper": "^11.2.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+    "verify": "node scripts/verify-entry.js ",
+    "start": "yarn verify && craco start",
+    "build": "yarn verify && craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
