--- a/packages/hs-home/package.json
+++ b/packages/hs-home/package.json
@@ -5,6 +5,8 @@
     "@craco/craco": "^7.1.0",
     "antd": "^5.25.0",
     "axios": "^1.9.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "luxon": "^3.6.1",
